<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.owner.cafm.MainActivity"
    android:weightSum="0.9"
    android:layout_gravity="center">


    <!-- Change width to percentage -->
    <LinearLayout
        android:layout_width="50mm"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:layout_marginTop="80dp"
            android:src="@drawable/login_icon" />

        <TextView
            android:id="@+id/LogInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:paddingBottom="15dp"
            android:text="@string/verify_phone_number"
            android:textAlignment="center"
            android:textColor="@color/logIn_Text"
            android:textSize="50px" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_username"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:paddingLeft="12dp"
                android:paddingRight="15dp"
                android:paddingTop="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/edit_text1"
                android:text="+961 "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_text_username"
                android:hint="@string/number"
                android:inputType="number" />
        </LinearLayout>


        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/send_message"
            android:textColor="@color/White"
            android:textSize="20dp" />

    </LinearLayout>


</LinearLayout>
